# OcamlAsmCompiler

./:   abstr.opam  dune-project  hello  hello.s
_build/: .db  .digest-db  log
_build/default/: META.abstr  META.interp  abstr.dune-package  abstr.install  interp.dune-package  interp.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: abstr.cma  abstr.cmxa  abstr.cmxs  abstr.ml-gen  ast.ml
_build/default/lib/.abstr.objs/byte/: abstr.cmi  abstr.cmo  abstr.cmt  abstr__Ast.cmi  abstr__Ast.cmo  abstr__Ast.cmt
_build/default/lib/.abstr.objs/native/: abstr.cmx  abstr__Ast.cmx
_build/default/lib/.merlin-conf/: lib-abstr
_build/default/test/.interp.eobjs/byte/: dune__exe__Interp.cmi  dune__exe__Interp.cmti
_build/default/test/.interp.eobjs/native/: dune__exe__Interp.cmx
_build/default/test/.merlin-conf/: exe-interp
_build/install/default/lib/abstr/: META  abstr.cma  abstr.cmi  abstr.cmt  abstr.cmx  abstr.cmxa  abstr.cmxs  abstr.ml  abstr__Ast.cmi  abstr__Ast.cmt  abstr__Ast.cmx  dune-package  opam
_build/install/default/lib/interp/: META  dune-package  main.cma  main.cmi  main.cmt  main.cmx  main.cmxa  main.cmxs  main.ml  main__.cmi  main__.cmt  main__.cmx  main__.ml  main__Lexer.cmi  main__Lexer.cmt  main__Lexer.cmx  main__Parser.cmi  main__Parser.cmt  main__Parser.cmti  main__Parser.cmx  opam  parser.ml  parser.mli
lib/: ast.ml  dune
test/: dune
(+6 files in other folders)
